# src/controllers/categoria.js
@@ -31,7 +31,7 @@ const putCategoria = async (req, res, next) => {
         let params = req.body
         params.id = req.params.id
         await categoriaService.putCategoria(params)
-            .then(ret => res.status(200).send(ret))
+            .then(ret => res.status(201).send(ret))
             .catch(err => res.status(500).send(err))
     } catch (err) {
         next(err);
